Inserindo Seção Sinopse, O guaraná e titúlo da seção de personagens

--- a/wp-content/themes/Parallax-One/custom.css
+++ b/wp-content/themes/Parallax-One/custom.css
@@ -53,3 +53,7 @@ img.img-right {
     height: 300px;
     position: absolute;
 }
+
+.call-to-action .section-overlay-layer {
+    background: none;
+}
