--- a/wp-content/themes/Parallax-One/custom.css
+++ b/wp-content/themes/Parallax-One/custom.css
@@ -80,6 +80,9 @@ img.img-right {
 .border-bottom-hover:hover {
     border-bottom-color: #145742;
 }
+.gas-icon {
+    padding: 15px;
+}
 
 .gas-icon img{
     max-height: 75px;
@@ -88,6 +91,16 @@ img.img-right {
 .footer {
     background: #d6e04d;
 }
+
+.social-icons {
+    padding: 15px;
+    display: flex;
+}
+
+.social-icons a {
+    margin-right: 20px;
+}
+
 .social-icons a.facebook {
     color: #0b5741;
 }
@@ -96,14 +109,26 @@ img.img-right {
     background: #0b5741;
     border: 1px #0b5741;
     border-radius: 124px;
-    padding: 38px 10px 15px 12px;
+    padding: 15px 9px 0px 11px;
     color: #d6e04d;
+    max-height: 75px;
+    margin-top: 1px;
 }
 
 .social-icons a.email {
     background: #0b5741;
     border: 1px #0b5741;
     border-radius: 124px;
-    padding: 38px 10px 15px 12px;
+    padding: 14px 13px 0px 13px;
     color: #d6e04d;
+    max-height: 75px;
+    margin-top: 1px;
+}
+
+.footer-bottom-wrap {
+    text-align: left;
+}
+
+.footer-title {
+    font-size: 12px;
 }
