Boostrap classes para responsivo do footer

--- a/wp-content/themes/Parallax-One/custom.css
+++ b/wp-content/themes/Parallax-One/custom.css
@@ -4,6 +4,7 @@
 
 .header .overlay-layer{
     padding-left: 40%!important;
+    padding-bottom: 10%;
 }
 
 .overlay-layer-wrap {
@@ -244,7 +245,7 @@ img.img-right {
         padding: 7%;
     }
 
-    .body {
+    body {
         font-size: 18px;
     }
 }
