--- a/wp-content/themes/Parallax-One/custom.css
+++ b/wp-content/themes/Parallax-One/custom.css
@@ -177,6 +177,11 @@ img.img-right {
     display: none;
 }
 
+.personagem img.responsive-hide {
+    max-height: 420px;
+    margin: 0 45px 0 50px;
+}
+
 /**
  * Responsivo
  */
