Iniciando página Folktober alterando configurações na área admin

--- a/wp-content/themes/Parallax-Folktober/style.css
+++ b/wp-content/themes/Parallax-Folktober/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Parallax One
+Theme Name: Parallax Folktober
 Theme URI: http://themeisle.com/themes/parallax-one/
 Author: ThemeIsle
 Author URI: http://themeisle.com/
